--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "sistema-ventas",
+  "bin": "app.js",
   "version": "1.0.0",
   "description": "Prueba tecnica de sistema de ventas",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "pkg": {
+    "scripts": "build/**/*.js",
+    "targets": [
+      "node14-win-x64"
+    ],
+    "outputPath": "dist"
   },
   "author": "Franco Yarel Fuentes Martinez",
   "license": "ISC",
